...
        textField.leftView = leftView
        textField.leftViewMode = .always

        return textField
    }()

    private lazy var favoritesTableView: UITableView = {
        let tableView = UITableView()
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.isHidden = true
        tableView.layer.cornerRadius = 10
        tableView.layer.masksToBounds = true
        tableView.separatorStyle = .none
...
        tableView.dataSource = favoritesDataSource
        tableView.register(FavoriteCell.self, forCellReuseIdentifier: "favoriteCell")
        tableView.accessibilityIdentifier = "favoritesTableView"
        return tableView
    }()

    private lazy var searchResultsTableView: UITableView = {
        let tableView = UITableView()
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.layer.cornerRadius = 10
        tableView.layer.masksToBounds = true
        tableView.separatorStyle = .none
        tableView.backgroundColor = .white
...
