...
    // MARK: - UI Elements
    private let animationView: LottieAnimationView = {
        let animation = LottieAnimationView(name: "splash_animation")
        animation.contentMode = .scaleAspectFit
        animation.loopMode = .playOnce
        animation.translatesAutoresizingMaskIntoConstraints = false
        animation.accessibilityIdentifier = "splashAnimation"
        return animation
    }()

    private lazy var appTitleLabel: UILabel = {
        let label = UILabel()
        label.text = LocalizationManager.localizedString(forKey: LocalizedKeys.Splash.appTitleLabel)
...
