...
        let button = UIButton(type: .system)
        button.translatesAutoresizingMaskIntoConstraints = false
        let trashImage = UIImage(systemName: "trash.circle.fill")
        button.setImage(trashImage, for: .normal)
        button.tintColor = .red
        button.addTarget(self, action: #selector(removeTapped), for: .touchUpInside)
        button.accessibilityIdentifier = "Eliminar"
        return button
    }()

    var removeAction: (() -> Void)?

    // MARK: - Initializer
...
